kubernetes/healthchecks/helm/healthchecks/common.yaml
---
# Source: healthchecks/charts/healthchecks/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks
  labels:
    app.kubernetes.io/service: healthchecks
    app.kubernetes.io/instance: healthchecks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: healthchecks
    app.kubernetes.io/version: version-v3.9
    helm.sh/chart: healthchecks-0.17.0
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: healthchecks
    app.kubernetes.io/name: healthchecks


---
# Source: healthchecks/charts/healthchecks/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthchecks
  labels:
    app.kubernetes.io/instance: healthchecks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: healthchecks
    app.kubernetes.io/version: version-v3.9
    helm.sh/chart: healthchecks-0.17.0
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: healthchecks
      app.kubernetes.io/instance: healthchecks
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthchecks
        app.kubernetes.io/instance: healthchecks
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      terminationGracePeriodSeconds: 0
      containers:
        - name: healthchecks
          image: ghcr.io/linuxserver/healthchecks:version-v3.9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8000
            timeoutSeconds: 1



---
# Source: healthchecks/charts/healthchecks/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthchecks
  labels:
    app.kubernetes.io/instance: healthchecks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: healthchecks
    app.kubernetes.io/version: version-v3.9
    helm.sh/chart: healthchecks-0.17.0
  annotations:
    ak-namespace: healthchecks
    ak-path-exclude: /api,/ping
    ak-type: simple
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: healthchecks.png
    gethomepage.dev/name: Healthchecks
spec:
  tls:
    - hosts:
        - "hc.k.oneill.net"
      secretName: "healthchecks-tls"
  rules:
    - host: "hc.k.oneill.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: healthchecks
                port:
                  number: 8000
